--- a/.github/workflows/publish-new-release.yaml
+++ b/.github/workflows/publish-new-release.yaml
@@ -31,7 +31,12 @@ jobs:
           commit: ${{ github.event.pull_request.merge_commit_sha }}
           name: Release v${{ env.RELEASE_VERSION }}
           tag: v${{ env.RELEASE_VERSION }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ github.token }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: main
 
       - name: Merge main branch into development branch
         uses: robotology/gh-action-nightly-merge@v1.3.1
@@ -40,4 +45,4 @@ jobs:
           development_branch: devel
           allow_ff: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
