--- a/.github/workflows/publish-new-release.yaml
+++ b/.github/workflows/publish-new-release.yaml
@@ -37,9 +37,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: 0
 
       - name: Merge main branch into development branch
-        uses: robotology/gh-action-nightly-merge@v1.3.1
+        uses: robotology/gh-action-nightly-merge@v1.3.2
         with:
           stable_branch: main
           development_branch: devel
