--- a/.github/workflows/publish-new-release.yaml
+++ b/.github/workflows/publish-new-release.yaml
@@ -33,17 +33,17 @@ jobs:
           tag: v${{ env.RELEASE_VERSION }}
           token: ${{ github.token }}
 
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: 0
+      # - name: Checkout
+      #   uses: actions/checkout@v2
+      #   with:
+      #     ref: ${{ github.event.pull_request.merge_commit_sha }}
+      #     fetch-depth: 0
 
-      - name: Merge main branch into development branch
-        uses: robotology/gh-action-nightly-merge@v1.3.2
-        with:
-          stable_branch: main
-          development_branch: devel
-          allow_ff: false
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
+      # - name: Merge main branch into development branch
+      #   uses: robotology/gh-action-nightly-merge@v1.3.2
+      #   with:
+      #     stable_branch: main
+      #     development_branch: devel
+      #     allow_ff: false
+      #   env:
+      #     GITHUB_TOKEN: ${{ github.token }}
