--- a/.github/workflows/draft-new-release.yaml
+++ b/.github/workflows/draft-new-release.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Create release branch
         run: |
-          git checkout -b release/${{ github.event.inputs.version }}
+          git branch release/${{ github.event.inputs.version }} devel
           git push origin release/${{ github.event.inputs.version }}
 
       - name: Create pull request
