--- a/.github/workflows/draft-new-release.yaml
+++ b/.github/workflows/draft-new-release.yaml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Create release branch
         run: |
+          git checkout devel
           git branch release/${{ github.event.inputs.version }} devel
           git push origin release/${{ github.event.inputs.version }}
 
@@ -29,21 +30,3 @@ jobs:
           title: Release v${{ github.event.inputs.version }}
           body: This PR was created in response to a manual trigger of the release workflow.
           draft: true
-
-      # - name: Create pull request
-      #   uses: thomaseizinger/create-pull-request@1.0.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     head: release/${{ github.event.inputs.version }}
-      #     base: master
-      #     title: Release version ${{ github.event.inputs.version }}
-      #     reviewers: ${{ github.actor }} # By default, we request a review from the person who triggered the workflow.
-      #     # Write a nice message to the user.
-      #     # We are claiming things here based on the `publish-new-release.yml` workflow.
-      #     # You should obviously adopt it to say the truth depending on your release workflow :)
-      #     body: |
-      #       Hi @${{ github.actor }}!
-      #       This PR was created in response to a manual trigger of the release workflow here: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}.
-      #       I've updated the changelog and bumped the versions in the manifest files in this commit: ${{ steps.make-commit.outputs.commit }}.
-      #       Merging this PR will create a GitHub release and upload any assets that are created as part of the release build.
