--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -1,4 +1,4 @@
-name: Publish new release
+name: Publish release
 on:
   pull_request:
     branches:
@@ -7,7 +7,7 @@ on:
       - closed
 jobs:
   release:
-    name: Publish new release
+    name: Publish release
     if: github.event.pull_request.merged == true # only merged pull requests must trigger this job
     runs-on: ubuntu-latest
     steps:
@@ -32,18 +32,3 @@ jobs:
           name: Release v${{ env.RELEASE_VERSION }}
           tag: v${{ env.RELEASE_VERSION }}
           token: ${{ github.token }}
-
-      # - name: Checkout
-      #   uses: actions/checkout@v2
-      #   with:
-      #     ref: ${{ github.event.pull_request.merge_commit_sha }}
-      #     fetch-depth: 0
-
-      # - name: Merge main branch into development branch
-      #   uses: robotology/gh-action-nightly-merge@v1.3.2
-      #   with:
-      #     stable_branch: main
-      #     development_branch: devel
-      #     allow_ff: false
-      #   env:
-      #     GITHUB_TOKEN: ${{ github.token }}
