--- a/.github/workflows/start-new-hotfix.yaml
+++ b/.github/workflows/start-new-hotfix.yaml
@@ -32,24 +32,24 @@ jobs:
               echo "::set-output name=title::Hotfix v${{ github.event.inputs.version }}: ${{ github.event.inputs.title }}"
           fi
 
-      # - name: Create pull request
-      #   uses: thomaseizinger/create-pull-request@1.0.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     head: hotfix/${{ github.event.inputs.version }}
-      #     base: main
-      #     title: ${{ steps.title_setup.outputs.title }}
-      #     body: This PR was created in response to a manual trigger of the hotfix workflow.
-      #     draft: true
-
       - name: Create pull request
-        uses: repo-sync/pull-request@v2
+        uses: thomaseizinger/create-pull-request@1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          source_branch: hotfix/${{ github.event.inputs.version }}
-          destination_branch: main
-          pr_title: '${{ steps.title_setup.outputs.title }}'
-          pr_body: This PR was created in response to a manual trigger of the hotfix workflow.
-          pr_allow_empty: true
-          pr_draft: true
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          head: hotfix/${{ github.event.inputs.version }}
+          base: main
+          title: ${{ steps.title_setup.outputs.title }}
+          body: This PR was created in response to a manual trigger of the hotfix workflow.
+          draft: true
+
+      # - name: Create pull request
+      #   uses: repo-sync/pull-request@v2
+      #   with:
+      #     source_branch: hotfix/${{ github.event.inputs.version }}
+      #     destination_branch: main
+      #     pr_title: '${{ steps.title_setup.outputs.title }}'
+      #     pr_body: This PR was created in response to a manual trigger of the hotfix workflow.
+      #     pr_allow_empty: true
+      #     pr_draft: true
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
