--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -25,7 +25,7 @@ jobs:
           VERSION=${BRANCH_NAME#hotfix/}
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Create Release
+      - name: Create release
         uses: ncipollo/release-action@v1
         with:
           commit: ${{ github.event.pull_request.merge_commit_sha }}
