--- a/.github/workflows/additional-tags.yaml
+++ b/.github/workflows/additional-tags.yaml
@@ -1,8 +1,10 @@
 name: Additional SemVer tags
 on:
-  create:
+  push:
+    branches-ignore:
+      - '**'
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+      - 'v*.*.*'
 jobs:
   create-tags:
     runs-on: ubuntu-latest
