--- a/.github/workflows/start-new-release.yaml
+++ b/.github/workflows/start-new-release.yaml
@@ -29,4 +29,4 @@ jobs:
           base: main
           title: Release v${{ github.event.inputs.version }}
           body: This PR was created in response to a manual trigger of the release workflow.
-          draft: true
+          # draft: true # Ideally the PR should be created as draft
