--- a/.github/workflows/check-version.yaml
+++ b/.github/workflows/check-version.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Check if package.xml version was updated
         run: |
           FILE_PATH=$(echo "${{ github.repository }}" | cut -d '/' -f 2)/package.xml
-          echo 'Searching version $VERSION in file $FILE_PATH'
+          echo "Searching version $VERSION in file $FILE_PATH"
           if grep -q $VERSION "$FILE_PATH"; then
             echo "Version not found!"
             exit 1
