--- a/.github/workflows/check-version.yaml
+++ b/.github/workflows/check-version.yaml
@@ -28,6 +28,6 @@ jobs:
           FILE_PATH=$(echo "${{ github.repository }}" | cut -d '/' -f 2)/package.xml
           echo "Searching version $VERSION in file $FILE_PATH"
           if ! grep -q $VERSION "$FILE_PATH"; then
-            echo "Version not found!"
+            echo "Version not found! Please update the package.xml version..."
             exit 1
           fi
