--- a/actions-test/package.xml
+++ b/actions-test/package.xml
@@ -29,6 +29,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <exec_depend>actions_test_dep</exec_depend>
+  <exec_depend>actions_test_dep2</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
