--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -8,7 +8,11 @@ on:
 jobs:
   release:
     name: Publish release
-    if: github.event.pull_request.merged == true # only merged pull requests must trigger this job
+    if: |
+      github.event.pull_request.merged == true && (
+        startsWith(github.event.pull_request.head.ref, 'release/')
+        || startsWith(github.event.pull_request.head.ref, 'hotfix/')
+      )
     runs-on: ubuntu-latest
     steps:
       - name: Extract version from branch name (for release branches)
