--- a/.github/workflows/check-version.yaml
+++ b/.github/workflows/check-version.yaml
@@ -28,9 +28,9 @@ jobs:
 
       - name: Check if package.xml version was updated
         run: |
-          FILE_PATH=$(echo "${{ github.repository }}" | cut -d '/' -f 2)/package.xml
+          FILE_PATH=$(echo "${{ github.repository }}" | cut -d '/' -f 2)/package.xm
           echo "Searching version $VERSION in file $FILE_PATH"
-          if ! grep -q $VERSION "$FILE_PATH"; then
+          if [ -f $FILE_PATH ]  && ! grep -q $VERSION "$FILE_PATH"; then
             echo "Version not found! Please update the package.xml version..."
             exit 1
           fi
